Bug 1109742 - Fix Body.json() error rejection. r=baku

--HG--
extra : rebase_source : f76f97258fd09ce6391f70487ea8bd6ec76edce5